# fscompat

./: .travis.yml  CODEOWNERS  README.md  meson.build
subprojects/frontend-darwin/: README.md  generate-bundle.sh  generate-package.sh  meson.build  meson_options.txt
subprojects/frontend-darwin/src/: Info.plist  fscompat.c
subprojects/frontend-freebsd/: README.md  meson.build
subprojects/frontend-freebsd/src/: Makefile
subprojects/frontend-fuse/: README.md  meson.build
subprojects/frontend-fuse/include/: fused-shared.h  fused.h
subprojects/frontend-fuse/src/: fat.c  io.c
subprojects/frontend-linux/: COPYING.ISC  Kbuild  README.md  build.sh  fscompat.c  meson.build
subprojects/fs-fat/: README.md  meson.build
subprojects/fs-fat/include/: fat.h
subprojects/fs-fat/src/: fat.c
subprojects/interface/: README.md  meson.build
subprojects/interface/include/: fscompat.h
